--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ body {
         list-style-type: none;
         margin: 0;
         flex-wrap: wrap;
+        padding-left: 0;
     }
     .info-img{
         width: 200px;
